--- a/package.json
+++ b/package.json
@@ -7,10 +7,25 @@
     "test": "jest",
     "prepare": "husky install"
   },
+  "lint-staged": {
+    "*.js": [
+      "eslint",
+      "prettier --write ."
+    ]
+  },
   "author": "Vamshi Vignesh <bagulavamshivignesh25@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.31.0",
     "husky": "^8.0.3",
-    "jest": "^29.3.1"
+    "jest": "^29.3.1",
+    "lint-staged": "^13.1.0",
+    "prettier": "^2.8.1",
+    "sequelize-cli": "^6.5.2"
+  },
+  "dependencies": {
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.28.0"
   }
 }
