--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "My node application creating a online voting platform",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon -e js,ejs",
     "test": "jest",
     "prepare": "husky install"
   },
@@ -20,10 +21,14 @@
     "husky": "^8.0.3",
     "jest": "^29.3.1",
     "lint-staged": "^13.1.0",
+    "nodemon": "^2.0.20",
     "prettier": "^2.8.1",
     "sequelize-cli": "^6.5.2"
   },
   "dependencies": {
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.28.0"
